--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = { version = "0.23.0", features = ["persistence"] }
+egui = "0.23.0"
+serde = { version = "1.0.188", features = ["derive"] }
