--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 eframe = { version = "0.23.0", features = ["persistence", "wgpu"] }
 egui = "0.23.0"
+emath = "0.23.0"
 screenshots = "0.8.4"
 serde = { version = "1.0.188", features = ["derive"] }
