--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ eframe = { version = "0.23.0", features = ["persistence", "wgpu"] }
 egui = "0.23.0"
 screenshots = "0.8.4"
 serde = { version = "1.0.188", features = ["derive"] }
+
+[dependencies.confy]
+confy = "0.5.1"
+features = ["yaml_conf"]
+default-features = false
