skia example added screenshot capture

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ lazy_static = "1.4.0"
 screenshots = "0.8.5"
 serde = { version = "1.0.190", features = ["derive"] }
 confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
-skia-safe = "0.68.0"
+skia-safe = { version = "0.68.0", features = ["textlayout"] }
+image = "0.24.7"
 
 [profile.release]
 strip = true
