--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ lazy_static = "1.4.0"
 screenshots = "0.8.5"
 serde = { version = "1.0.190", features = ["derive"] }
 confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
+egui_glow = "0.23.0"
