--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ skia-safe = { version = "0.68.0", features = ["textlayout"] }
 image = "0.24.7"
 chrono = "0.4.31"
 rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
+crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 
 [profile.release]
 strip = true
