--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ image = "0.24.7"
 chrono = "0.4.31"
 rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
+arboard = "3.3.0"
 
 [profile.release]
 strip = true
